--- a/index.html
+++ b/index.html
@@ -1,9 +1,665 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Arcade</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Neon Arcade Gallery</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet" />
+  <style>
+    :root {
+      color-scheme: dark;
+      --bg-main: #06080f;
+      --bg-secondary: rgba(12, 18, 36, 0.7);
+      --grid-color: rgba(0, 214, 255, 0.05);
+      --accent: #13f0ff;
+      --accent-secondary: #ff4de1;
+      --text-primary: #ffffff;
+      --text-muted: rgba(255, 255, 255, 0.7);
+      --card-bg: rgba(12, 18, 36, 0.88);
+      --card-border: rgba(19, 240, 255, 0.2);
+      --glow: 0 0 1.5rem rgba(19, 240, 255, 0.45);
+      --glow-strong: 0 0 2.5rem rgba(255, 77, 225, 0.6);
+      --card-radius: 18px;
+      --transition-speed: 280ms;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      margin: 0;
+      min-height: 100%;
+      font-family: "Rajdhani", system-ui, sans-serif;
+      background: var(--bg-main);
+      color: var(--text-primary);
+      overflow-x: hidden;
+    }
+
+    body {
+      position: relative;
+    }
+
+    body::before,
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      z-index: -2;
+    }
+
+    body::before {
+      background: radial-gradient(circle at 20% 20%, rgba(19, 240, 255, 0.25), transparent 45%),
+        radial-gradient(circle at 80% 0%, rgba(255, 77, 225, 0.18), transparent 40%),
+        linear-gradient(120deg, rgba(6, 8, 15, 0.92), rgba(6, 8, 15, 0.85));
+    }
+
+    body::after {
+      background-image: linear-gradient(rgba(0, 214, 255, 0.05) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(0, 214, 255, 0.05) 1px, transparent 1px);
+      background-size: 60px 60px;
+      animation: grid-pan 30s linear infinite;
+      opacity: 0.25;
+    }
+
+    @keyframes grid-pan {
+      from {
+        transform: translate3d(0, 0, 0);
+      }
+      to {
+        transform: translate3d(-60px, -60px, 0);
+      }
+    }
+
+    .scanlines {
+      pointer-events: none;
+      position: fixed;
+      inset: 0;
+      z-index: -1;
+      background-image: repeating-linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.12) 0px,
+        rgba(0, 0, 0, 0.12) 2px,
+        transparent 2px,
+        transparent 4px
+      );
+      mix-blend-mode: overlay;
+      opacity: 0.25;
+      animation: scan 6s linear infinite;
+    }
+
+    @keyframes scan {
+      0% {
+        transform: translateY(-10%);
+      }
+      50% {
+        transform: translateY(10%);
+      }
+      100% {
+        transform: translateY(-10%);
+      }
+    }
+
+    .particle-field {
+      position: fixed;
+      inset: 0;
+      overflow: hidden;
+      z-index: -1;
+      pointer-events: none;
+    }
+
+    .particle {
+      position: absolute;
+      width: 4px;
+      height: 4px;
+      background: rgba(19, 240, 255, 0.65);
+      box-shadow: 0 0 8px rgba(19, 240, 255, 0.65);
+      border-radius: 999px;
+      animation: float var(--duration) linear infinite;
+    }
+
+    @keyframes float {
+      from {
+        transform: translateY(110vh) scale(0.5);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      to {
+        transform: translateY(-10vh) scale(1.2);
+        opacity: 0;
+      }
+    }
+
+    .page-wrapper {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      padding: clamp(2rem, 5vw, 4rem);
+      gap: clamp(2rem, 4vw, 3rem);
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 1rem;
+      background: rgba(6, 8, 15, 0.8);
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(19, 240, 255, 0.2);
+      border-radius: 999px;
+      padding: 0.75rem 1.25rem;
+      box-shadow: var(--glow);
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--accent);
+      font-weight: 600;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      font-family: "Orbitron", sans-serif;
+    }
+
+    .toggle-group {
+      display: flex;
+      gap: 0.75rem;
+      align-items: center;
+    }
+
+    .toggle-button {
+      border: 1px solid rgba(19, 240, 255, 0.4);
+      border-radius: 999px;
+      padding: 0.45rem 0.95rem;
+      background: rgba(12, 18, 36, 0.7);
+      color: var(--text-primary);
+      font-family: "Orbitron", sans-serif;
+      letter-spacing: 0.08em;
+      cursor: pointer;
+      transition: transform var(--transition-speed) ease, box-shadow var(--transition-speed) ease;
+    }
+
+    .toggle-button:hover {
+      transform: translateY(-2px);
+      box-shadow: var(--glow);
+    }
+
+    header {
+      display: grid;
+      gap: clamp(1.5rem, 3vw, 2.5rem);
+      text-align: center;
+    }
+
+    .headline {
+      font-family: "Orbitron", sans-serif;
+      font-size: clamp(2.5rem, 6vw, 4rem);
+      text-transform: uppercase;
+      letter-spacing: 0.3em;
+      text-shadow: 0 0 20px rgba(19, 240, 255, 0.6), 0 0 30px rgba(255, 77, 225, 0.6);
+    }
+
+    .headline span {
+      color: var(--accent-secondary);
+    }
+
+    .tagline {
+      font-size: clamp(1.1rem, 2.5vw, 1.35rem);
+      max-width: 680px;
+      margin: 0 auto;
+      color: var(--text-muted);
+      line-height: 1.6;
+    }
+
+    main {
+      display: grid;
+      gap: clamp(2rem, 4vw, 3rem);
+    }
+
+    .gallery-title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .gallery-title h2 {
+      font-family: "Orbitron", sans-serif;
+      font-size: 1.5rem;
+      letter-spacing: 0.2em;
+      margin: 0;
+      text-transform: uppercase;
+    }
+
+    .gallery-title p {
+      margin: 0;
+      color: var(--text-muted);
+      letter-spacing: 0.08em;
+    }
+
+    .card-grid {
+      display: grid;
+      gap: clamp(1.5rem, 3vw, 2.5rem);
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
+
+    .game-card {
+      position: relative;
+      border-radius: var(--card-radius);
+      background: var(--card-bg);
+      border: 1px solid var(--card-border);
+      overflow: hidden;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      transition: transform var(--transition-speed) ease, box-shadow var(--transition-speed) ease,
+        border-color var(--transition-speed) ease;
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.35);
+      isolation: isolate;
+    }
+
+    .game-card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(135deg, rgba(19, 240, 255, 0.06), transparent 60%);
+      opacity: 0;
+      transition: opacity var(--transition-speed) ease;
+      z-index: 0;
+    }
+
+    .game-card:hover {
+      transform: translateY(-14px) scale(1.02);
+      border-color: rgba(255, 77, 225, 0.5);
+      box-shadow: var(--glow-strong);
+    }
+
+    .game-card:hover::before {
+      opacity: 1;
+    }
+
+    .card-media {
+      position: relative;
+      aspect-ratio: 16 / 10;
+      overflow: hidden;
+    }
+
+    .card-media img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 600ms ease;
+      filter: saturate(1.1);
+    }
+
+    .game-card:hover .card-media img {
+      transform: scale(1.07);
+    }
+
+    .card-glow {
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at 20% 20%, rgba(19, 240, 255, 0.25), transparent 55%),
+        radial-gradient(circle at 80% 80%, rgba(255, 77, 225, 0.18), transparent 60%);
+      mix-blend-mode: screen;
+      opacity: 0;
+      transition: opacity var(--transition-speed) ease;
+    }
+
+    .game-card:hover .card-glow {
+      opacity: 1;
+    }
+
+    .card-body {
+      padding: 1.5rem;
+      display: grid;
+      gap: 1.25rem;
+    }
+
+    .card-header {
+      display: flex;
+      flex-direction: column;
+      gap: 0.35rem;
+    }
+
+    .card-title {
+      margin: 0;
+      font-family: "Orbitron", sans-serif;
+      letter-spacing: 0.14em;
+      font-size: 1.1rem;
+      text-transform: uppercase;
+    }
+
+    .card-description {
+      margin: 0;
+      color: var(--text-muted);
+      line-height: 1.5;
+      font-size: 0.95rem;
+    }
+
+    .card-actions {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .play-button {
+      background: linear-gradient(135deg, rgba(19, 240, 255, 0.9), rgba(255, 77, 225, 0.9));
+      color: #020307;
+      border: none;
+      border-radius: 999px;
+      padding: 0.6rem 1.5rem;
+      font-family: "Orbitron", sans-serif;
+      letter-spacing: 0.12em;
+      cursor: pointer;
+      text-transform: uppercase;
+      transition: transform var(--transition-speed) ease, box-shadow var(--transition-speed) ease;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-weight: 600;
+      box-shadow: 0 0 20px rgba(19, 240, 255, 0.35);
+    }
+
+    .play-button::after {
+      content: "▶";
+      font-size: 0.85rem;
+    }
+
+    .play-button:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 0 28px rgba(255, 77, 225, 0.5);
+    }
+
+    .meta-label {
+      border: 1px solid rgba(19, 240, 255, 0.35);
+      border-radius: 999px;
+      padding: 0.3rem 0.75rem;
+      font-size: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.15em;
+      color: var(--accent);
+    }
+
+    footer {
+      margin-top: auto;
+      text-align: center;
+      color: var(--text-muted);
+      letter-spacing: 0.1em;
+      font-size: 0.85rem;
+      text-transform: uppercase;
+    }
+
+    .crt-overlay {
+      position: fixed;
+      inset: 0;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 400ms ease;
+      background: repeating-linear-gradient(
+        rgba(255, 255, 255, 0.04) 0px,
+        rgba(255, 255, 255, 0.04) 1px,
+        rgba(0, 0, 0, 0) 1px,
+        rgba(0, 0, 0, 0) 3px
+      );
+      mix-blend-mode: screen;
+      z-index: 10;
+    }
+
+    body.crt-mode {
+      filter: contrast(1.05) saturate(1.2);
+    }
+
+    body.crt-mode .crt-overlay {
+      opacity: 0.35;
+    }
+
+    body.crt-mode .game-card {
+      filter: saturate(1.2);
+    }
+
+    #loading-screen {
+      position: fixed;
+      inset: 0;
+      background: rgba(6, 8, 15, 0.95);
+      display: grid;
+      place-content: center;
+      z-index: 100;
+      transition: opacity 500ms ease;
+    }
+
+    .loader {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      border: 3px solid rgba(19, 240, 255, 0.2);
+      border-top-color: rgba(19, 240, 255, 0.85);
+      animation: spin 1s ease-in-out infinite;
+      box-shadow: var(--glow);
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @media (max-width: 700px) {
+      nav {
+        flex-direction: column;
+        align-items: stretch;
+      }
+      .gallery-title {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .card-actions {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .play-button {
+        width: 100%;
+        justify-content: center;
+      }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      *,
+      *::before,
+      *::after {
+        animation-duration: 1ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0ms !important;
+        scroll-behavior: auto !important;
+      }
+      body::after,
+      .scanlines,
+      .particle,
+      .crt-overlay,
+      #loading-screen {
+        animation: none !important;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Arcade - Games coming soon</h1>
+  <div id="loading-screen" aria-hidden="true">
+    <div class="loader" role="presentation"></div>
+  </div>
+  <div class="scanlines" aria-hidden="true"></div>
+  <div class="crt-overlay" aria-hidden="true"></div>
+  <div class="particle-field" aria-hidden="true"></div>
+
+  <div class="page-wrapper">
+    <nav>
+      <a href="/" aria-label="Return to main hub">← Back to Hub</a>
+      <div class="toggle-group">
+        <span class="meta-label">Filters</span>
+        <button class="toggle-button" type="button" id="crtToggle">CRT Mode</button>
+      </div>
+    </nav>
+
+    <header>
+      <h1 class="headline">Welcome to the <span>Neon Arcade</span></h1>
+      <p class="tagline">
+        Step into a digital midway where every cabinet glows with possibility. Browse through our curated gallery of retro-future
+        hits, indie delights, and high-score chasers—all primed and ready for play.
+      </p>
+    </header>
+
+    <main>
+      <div class="gallery-title">
+        <h2>Featured Cabinets</h2>
+        <p>Hover to preview • Click to play • More arriving soon</p>
+      </div>
+
+      <section class="card-grid" aria-label="Arcade game selection">
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=800&q=80" alt="Neon city skyline" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Neon Drift</h3>
+              <p class="card-description">Drift through synthwave cityscapes, outrunning rival crews in a turbo-charged neon racer.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Racing</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1528722828814-77b0b122ebc9?auto=format&fit=crop&w=800&q=80" alt="Pixelated dungeon scene" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Dungeon Pulse</h3>
+              <p class="card-description">Time your strikes to the rhythm, clearing procedurally generated dungeons in sync with the beat.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Rhythm</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?auto=format&fit=crop&w=800&q=80" alt="Retro space shooter" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Starfall 198X</h3>
+              <p class="card-description">Pilot the Starfall Defender in this bullet hell homage to the golden era of arcades.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Shooter</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=800&q=80" alt="Cyberpunk hacking interface" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Cipher Cascade</h3>
+              <p class="card-description">Race against time to crack cascading puzzles and infiltrate the megacorp mainframe.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Puzzle</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?auto=format&fit=crop&w=800&q=80" alt="VR rhythm game" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Quantum Beat</h3>
+              <p class="card-description">Slice, dodge, and groove through neon arenas in this VR-inspired rhythm slasher.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Action</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+
+        <article class="game-card">
+          <div class="card-media">
+            <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&w=800&q=80" alt="Colorful arcade cabinet" loading="lazy" />
+            <div class="card-glow"></div>
+          </div>
+          <div class="card-body">
+            <div class="card-header">
+              <h3 class="card-title">Cabinet Royale</h3>
+              <p class="card-description">Battle friends in a mashup of classic arcade challenges with modern twists and power-ups.</p>
+            </div>
+            <div class="card-actions">
+              <span class="meta-label">Party</span>
+              <a class="play-button" href="#">Play</a>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      More cabinets are powering up. Stay tuned for the next drop!
+    </footer>
+  </div>
+
+  <script>
+    const particleField = document.querySelector('.particle-field');
+    const particleCount = window.matchMedia('(prefers-reduced-motion: reduce)').matches ? 12 : 42;
+
+    for (let i = 0; i < particleCount; i++) {
+      const particle = document.createElement('span');
+      particle.className = 'particle';
+      const size = Math.random() * 4 + 2;
+      particle.style.width = `${size}px`;
+      particle.style.height = `${size}px`;
+      particle.style.left = `${Math.random() * 100}%`;
+      particle.style.animationDelay = `${Math.random() * 10}s`;
+      particle.style.setProperty('--duration', `${18 + Math.random() * 12}s`);
+      particleField.appendChild(particle);
+    }
+
+    const crtToggle = document.getElementById('crtToggle');
+    crtToggle.addEventListener('click', () => {
+      document.body.classList.toggle('crt-mode');
+      const active = document.body.classList.contains('crt-mode');
+      crtToggle.textContent = active ? 'CRT Mode: ON' : 'CRT Mode';
+    });
+
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loading-screen');
+      if (!loader) return;
+      loader.style.opacity = '0';
+      loader.style.pointerEvents = 'none';
+      setTimeout(() => loader.remove(), 600);
+    });
+  </script>
 </body>
 </html>
