--- a/index.html
+++ b/index.html
@@ -556,13 +556,32 @@
 
         function focusCabinet(cabinet) {
           walkwayReturnPosition.set(0, 1.6, cameraRig.position.z);
-          startScriptedMotion(cabinet.userData.focusPosition, 900);
+          infoPanel.classList.remove('visible');
+          const alignZ = THREE.MathUtils.clamp(cabinet.position.z, minZ, maxZ);
+          const walkwayAlign = new THREE.Vector3(0, 1.6, alignZ);
+          const forwardLookTarget = new THREE.Vector3(0, 1.6, alignZ - 8);
+          const cabinetLookTarget = cabinet.position.clone().setY(2.4);
+          const approachPosition = cabinet.userData.focusPosition.clone();
+
+          startScriptedMotion(
+            [
+              { position: walkwayAlign, duration: 600, lookTarget: forwardLookTarget, lookLerpSpeed: 0.1 },
+              { position: walkwayAlign, duration: 450, lookTarget: cabinetLookTarget, lookLerpSpeed: 0.16 },
+              { position: approachPosition, duration: 700, lookTarget: cabinetLookTarget, lookLerpSpeed: 0.2 },
+            ],
+            {
+              onComplete: () => {
+                if (activeCabinet === cabinet) {
+                  infoPanel.classList.add('visible');
+                }
+              },
+            }
+          );
           resetHoverState();
           activeCabinet = cabinet;
           infoTitle.textContent = cabinet.userData.game.name;
           infoDescription.textContent = cabinet.userData.game.description;
           playButton.href = cabinet.userData.game.url;
-          infoPanel.classList.add('visible');
           renderer.domElement.style.cursor = 'default';
         }
 
@@ -575,13 +594,67 @@
           targetZ = walkwayReturnPosition.z;
         }
 
-        function startScriptedMotion(target, duration = 900) {
-          scriptedMotion = {
-            start: cameraRig.position.clone(),
-            target: target.clone(),
-            startTime: performance.now(),
-            duration,
+        function startScriptedMotion(targetOrSteps, durationOrOptions) {
+          let options = {};
+          if (typeof durationOrOptions === 'number') {
+            options.defaultDuration = durationOrOptions;
+          } else if (durationOrOptions) {
+            options = durationOrOptions;
+          }
+
+          const defaultDuration = options.defaultDuration ?? 900;
+
+          const stepsSource = Array.isArray(targetOrSteps)
+            ? targetOrSteps
+            : [targetOrSteps];
+
+          const toVector3 = (value) => {
+            if (!value) return null;
+            if (value.isVector3) return value.clone();
+            if (typeof value.x === 'number' && typeof value.y === 'number' && typeof value.z === 'number') {
+              return new THREE.Vector3(value.x, value.y, value.z);
+            }
+            return null;
           };
+
+          const steps = stepsSource
+            .map((step) => {
+              if (!step) return null;
+              if (step.isVector3) {
+                return {
+                  position: step.clone(),
+                  duration: defaultDuration,
+                  lookTarget: null,
+                  lookLerpSpeed: null,
+                };
+              }
+
+              const position = toVector3(step.position ?? step);
+              if (!position) return null;
+
+              return {
+                position,
+                duration: step.duration ?? defaultDuration,
+                lookTarget: toVector3(step.lookTarget),
+                lookLerpSpeed:
+                  typeof step.lookLerpSpeed === 'number' ? step.lookLerpSpeed : null,
+              };
+            })
+            .filter(Boolean);
+
+          if (!steps.length) {
+            scriptedMotion = null;
+            return;
+          }
+
+          scriptedMotion = {
+            steps,
+            currentStep: 0,
+            start: cameraRig.position.clone(),
+            startTime: performance.now(),
+            onComplete: options.onComplete ?? null,
+          };
+
           scrollVelocity = 0;
         }
 
@@ -717,14 +790,41 @@
           const now = performance.now();
           const deltaSeconds = Math.min((now - lastFrameTime) / 1000, 0.1);
           lastFrameTime = now;
+          let forcedLookTarget = null;
+          let forcedLookLerp = null;
           if (scriptedMotion) {
-            const elapsed = now - scriptedMotion.startTime;
-            const t = Math.min(elapsed / scriptedMotion.duration, 1);
-            const eased = t >= 1 ? 1 : 1 - Math.pow(1 - t, 3);
-            cameraRig.position.lerpVectors(scriptedMotion.start, scriptedMotion.target, eased);
-            if (t >= 1) {
-              cameraRig.position.copy(scriptedMotion.target);
+            const step = scriptedMotion.steps[scriptedMotion.currentStep];
+            if (step) {
+              const elapsed = now - scriptedMotion.startTime;
+              const t = Math.min(elapsed / step.duration, 1);
+              const eased = t >= 1 ? 1 : 1 - Math.pow(1 - t, 3);
+              cameraRig.position.lerpVectors(scriptedMotion.start, step.position, eased);
+              if (step.lookTarget) {
+                forcedLookTarget = step.lookTarget;
+              }
+              if (typeof step.lookLerpSpeed === 'number') {
+                forcedLookLerp = step.lookLerpSpeed;
+              }
+              if (t >= 1) {
+                cameraRig.position.copy(step.position);
+                scriptedMotion.currentStep += 1;
+                if (scriptedMotion.currentStep >= scriptedMotion.steps.length) {
+                  const onComplete = scriptedMotion.onComplete;
+                  scriptedMotion = null;
+                  if (typeof onComplete === 'function') {
+                    onComplete();
+                  }
+                } else {
+                  scriptedMotion.start = cameraRig.position.clone();
+                  scriptedMotion.startTime = now;
+                }
+              }
+            } else {
+              const onComplete = scriptedMotion.onComplete;
               scriptedMotion = null;
+              if (typeof onComplete === 'function') {
+                onComplete();
+              }
             }
           } else if (!activeCabinet) {
             const damping = Math.exp(-2.8 * deltaSeconds);
@@ -746,7 +846,9 @@
             walkwayReturnPosition.set(0, 1.6, cameraRig.position.z);
           }
 
-          if (activeCabinet) {
+          if (forcedLookTarget) {
+            desiredLookTarget.copy(forcedLookTarget);
+          } else if (activeCabinet) {
             desiredLookTarget.copy(activeCabinet.position).setY(2.4);
           } else if (hoverCabinet) {
             desiredLookTarget.copy(hoverCabinet.position).setY(cameraRig.position.y);
@@ -754,7 +856,8 @@
             desiredLookTarget.set(0, 1.5, cameraRig.position.z - 10);
           }
 
-          const lookLerpSpeed = activeCabinet ? 0.2 : 0.08;
+          const lookLerpSpeed =
+            typeof forcedLookLerp === 'number' ? forcedLookLerp : activeCabinet ? 0.2 : 0.08;
           lookTarget.lerp(desiredLookTarget, lookLerpSpeed);
 
           if (hoverLockState === 'panning' && hoverCabinet) {
